--- a/code.html
+++ b/code.html
@@ -1,18 +1,27 @@
+<!-- Avinash Thapa -->
+<!-- Fashion Blog HTML Project -->
 
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- The following title will be the tab name in browser -->
     <title>Everyday with Isa</title>
   </head>
   <body>
+    <!-- First block to introduce the author -->
     <div>
-      <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/profile.jpg"/>
+      <!-- Picture of the author, and picture is linked with the contact that's at the bottom of the page-->
+      <a href="#contact"><img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/profile.jpg"/></a>
       <h3>by Isabelle Rodriguez | 1 day ago</h3>
     </div>
     <div>
       <h1>An Insider's Guide to NYFW</h1>
       <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/image-one.jpeg"/>
-      <p>NYFW can be both amazingly fun <and>&</and> incredibly overwhelming, especially if you’ve never been. Luckily, I’m here to give you an insider’s guide and make your first show a pleasurable experience. By taking my tips and tricks, and following your gut, you’ll have an unforgettable experience!</p>
+      <p>
+        <!-- Make the NYFW a link to a wikipedia page, opens up in new window-->
+        <a href="https://en.wikipedia.org/wiki/New_York_Fashion_Week" target="_blank">NYFW</a>
+        can be both amazingly fun <and>&</and> incredibly overwhelming, especially if you’ve never been. Luckily, I’m here to give you an insider’s guide and make your first show a pleasurable experience. By taking my tips and tricks, and following your gut, you’ll have an unforgettable experience!
+      </p>
     </div>
     <div>
       <h2>Getting Tickets <and>&</and> Picking the Shows</h2>
@@ -25,6 +34,7 @@
       <p>Always be true to your own sense of style, if you don’t you’ll be uncomfortable the whole time and it will show. Remember, NYFW is about expressing yourself and taking in what the designers have chosen to express through their new lines. Also it’s important to wear shoes you’ll be comfortable in all day. Obviously you want to look good, but you’ll be on your feet all day long, so be prepared.</p>
     </div>
     <div>
+      <!--An unordered list to link related contents-->
       <h4>Related Content</h4>
       <ul>
         <li>How To Style Boyfriend Jeans</li>
@@ -32,6 +42,13 @@
         <li>The Overalls Trend</li>
         <li>Fall’s It Color: Blush</li>
       </ul>
+    <!--This will help link within same page to the contact information of the author-->
+    </div>
+    <div id='contact'>
+      <p>
+        <!--<strong> bolds the email, phone, and address-->
+        <strong>email</strong>: isa@fashionblog.com | <strong>phone</strong>: 917-555-1098 | <strong>address</strong>: 371 284th St, New York, NY, 10001
+      </p>
     </div>
   </body>
 </html>
