--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+
 <!-- Avinash Thapa -->
 <!-- Fashion Blog HTML Project -->
+<!-- December 20, 2023 -->
+
 <html>
   <head>
     <!-- The following title will be the tab name in browser -->
